# ArcTecFoxSynth

./: .replit  auth.py  config.py  data_processor.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  styles.py  synthetic.py  utils.py  visualizations.py
.streamlit/: config.toml
attached_assets/: Pasted-Please-redesign-the-ArcTecFox-landing-page-to-follow-the-structure-and-design-outlined-below-The-pa-1736290561462.txt  Pasted-cd-backend-uvicorn-app-main-app-host-0-0-0-0-port-3000-ArcTecFoxSynth-c-ArcTecFoxSynth--1735662909986.txt
backend/: requirements.txt
backend/app/: main.py
backend/app/static/: index.html  styles.css
backend/config/: __init__.py  dev_settings.py  prod_settings.py  secrets.env  settings.py
backend/docs/: AF_Flow.docx  Appflow.md
backend/static/: index.html  styles.css
backend/static/css/: styles.css
backend/static/styles/: output.css
pages/: 1_Upload.py  2_Generate.py  3_Analyze.py  4_Scorecard.py  5_Settings.py
styles/: custom.css
utils/: auth.py  database.py  synthetic.py
