[project]
name = "repl-nix-arctecfox"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.4",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "fastapi>=0.115.6",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sdv>=1.17.3",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.1",
    "uvicorn>=0.34.0",
]
